<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#ffdfeaf1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal|top">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MainActivityTitle"
            android:textSize="25sp"
            android:id="@+id/textView"
            android:textAlignment="center"
            android:layout_centerHorizontal="true" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/textView"
            android:layout_marginTop="24dp"
            android:id="@+id/scrollView" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    style="@style/OrangeAppButton"
                    android:text="@string/spotify_streamer"
                    android:id="@+id/button"/>

                <Button
                    style="@style/OrangeAppButton"
                    android:text="@string/scores_app"
                    android:id="@+id/button2"
                    android:layout_marginTop="14dp"/>

                <Button
                    style="@style/OrangeAppButton"
                    android:text="@string/library_app"
                    android:id="@+id/button3"
                    android:layout_marginTop="14dp" />

                <Button
                    style="@style/OrangeAppButton"
                    android:text="@string/build_it_bigger"
                    android:id="@+id/button4"
                    android:layout_marginTop="14dp"/>

                <Button
                    style="@style/OrangeAppButton"
                    android:text="@string/xyz_reader"
                    android:id="@+id/button5"
                    android:layout_marginTop="14dp"/>

                <Button
                    style="@style/RedAppButton"
                    android:text="@string/my_own_app"
                    android:id="@+id/button6"
                    android:layout_marginTop="14dp" />
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</FrameLayout>
